[tool.poetry]
name = "database-interface"
version = "0.1.5"
description = ""
authors = ["cbarne02 <Christopher.Barnett@tufts.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0rc0"
PyMySQL = "^1.0.2"
SQLAlchemy = "^2.0.3"
pymssql = "^2.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
