[project]
name = "database-interface"
version = "0.3.0"
description = "code to abstract working with rt-analytics database"
authors = [{name="Chris Barnett", email="Christopher.Barnett@tufts.edu"}]
dependencies = [
    "pandas>=2.0",
    "PyMySQL>=1.1.0",
    "SQLAlchemy",
    "pytest",
]
requires-python = ">= 3.11"

[project.optional-dependencies]
mysql = ["PyMySQL"]
postgres = ["psycopg2-binary"]

[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"
